--- a/exercicios-mod4/mediaquery/mq001/estilos/imprimir.css
+++ b/exercicios-mod4/mediaquery/mq001/estilos/imprimir.css
@@ -11,8 +11,12 @@ html{
     font-family: 'Courier New', Courier, monospace;
     font-size: 1em;
     line-height: 1.5em;
-}
+}  
 
-menu{
+menu {
     display: none;
+}  
+    
+article::after{
+    content: 'Esse artigo foi impresso atráves do site www.cursoemvideo.com';
 }
