--- a/exercicios-mod4/mediaquery/mq004/estilos/media-query.css
+++ b/exercicios-mod4/mediaquery/mq004/estilos/media-query.css
@@ -3,31 +3,68 @@
 /* Diferentes versões com Media Query */
 
 @media print{ /* Impressoras */
-    body{
+    *{
         font-family: 'Courier New', Courier, monospace;
-        
     }
+
+    html{
+        background-image: none;
+    }
+
+    main{
+        border: 2px solid black;
+        width: 90vw;
+    }
+
+    main h1{
+        color: black;
+        text-shadow: none;
+    }
+
+    main::after{
+        content: 'Esse site foi feito por inspiração de Curso em Video';
+        text-decoration: overline;
+    }
+
+    img#pc{display: none;}
+    img#tel{display: none;}
+    img#tablet{display: none;}
+    img#printer{display: block;}
+    img#tv{display: none;}
 }
 
 @media only screen and (min-width: 768px) { /* Tablets */
-    body{
+    html{
         background: url(../imagens/back-tablet.jpg);
-        img#pc{display: none;}
-        img#tel{display: block;}
-        img#tablet{display: none;}
-        img#printer{display: none;}
-        img#tv{display: none;}
     }
+
+    img#pc{display: none;}
+    img#tel{display: none;}
+    img#tablet{display: block;}
+    img#printer{display: none;}
+    img#tv{display: none;}
 }
 
 @media only screen and (min-width: 992px) { /* laptops/desktops */
-    body{
+    html{
         background: url(../imagens/back-pc.jpg);
     }
+
+    img#pc{display: block;}
+    img#tel{display: none;}
+    img#tablet{display: none;}
+    img#printer{display: none;}
+    img#tv{display: none;}
 }
 
 @media only screen and (min-width: 1200px) { /* Tv */
-    body{
+    html{
         background: url(../imagens/back-tv.jpg);
     }
+
+    img#pc{display: none;}
+    img#tel{display: none;}
+    img#tablet{display: none;}
+    img#printer{display: none;}
+    img#tv{display: block;}
 }
