--- a/exercicios-mod4/mediaquery/mq004/estilos/style.css
+++ b/exercicios-mod4/mediaquery/mq004/estilos/style.css
@@ -11,7 +11,7 @@
 
 html{
     height: 100vh;
-    background: black url(../imagens/back-phone.jpg) no-repeat;
+    background: url(../imagens/back-phone.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
 
@@ -19,7 +19,7 @@ html{
 
 main{
     background-color: rgba(255, 255, 255, 0.801);
-    width: 400px;
+    width: 80vw;
     margin: 10px auto 0px auto;
     border-radius: 10px;
     padding: 10px;
